--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,4 @@
 /*Components*/
 @import "./styles/App.scss";
 @import "./styles/components/CardInfo.scss";
+@import "./styles/components/ModalView.scss";
